# shiny-test

./: app.py  code.py  config.py  data_prep.py  plots.py  prep.py  pyproject.toml  requirements.txt  styles.css
data/: municipal_data.json  schedule701_2005.xls  schedule701_2022.xlsx  schedule701_2023.xlsx  schedule701_2025.xlsx  schedule702_2022.xlsx  schedule702_2023.xlsx  schedule703_2007.xls  schedule703_2008.xls  schedule703_2012.xls  schedule703_2013.xls  schedule703_2014.xls  schedule703_2016.xls  schedule703_2018.xls  schedule703_2020.xlsx  schedule703_2021.xlsx  schedule703_2022.xlsx  schedule703_2023.xlsx  schedule704_2005.xls  schedule704_2006.xls  schedule704_2007.xls  schedule704_2008.xls  schedule704_2010.xls  schedule704_2012.xls  schedule704_2013.xls  schedule704_2014.xls  schedule704_2015.xls  schedule704_2019.xls  schedule704_2022.xlsx  schedule704_2023.xlsx  schedule704_2024.xlsx  schedule704_2025.xlsx  schedule707_2005.xls  schedule707_2006.xls  schedule707_2007.xls  schedule707_2008.xls  schedule707_2009.xls  schedule707_2011.xls  schedule707_2013.xls  schedule707_2014.xls  (+6 more)
data/raw/: schedule701_2009.xls  schedule701_2024.xlsx  schedule702_2006.xls  schedule702_2024.xlsx  schedule702_2025.xlsx  schedule703_2005.xls  schedule703_2006.xls  schedule703_2009.xls  schedule703_2010.xls  schedule703_2011.xls  schedule703_2015.xls  schedule703_2017.xls  schedule703_2019.xls  schedule703_2024.xlsx  schedule703_2025.xlsx  schedule704_2005.xls  schedule704_2009.xls  schedule704_2011.xls  schedule704_2016.xls  schedule704_2017.xls  schedule704_2018.xls  (+13 more)
(+1 files in other folders)
