[project]
name = "shiny-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "shiny>=1.6.0",
    "shinylive>=0.8.6",
    "shinywidgets>=0.7.2",
    "xlrd>=2.0.2",
]
